--- a/FirstSite/index.html
+++ b/FirstSite/index.html
@@ -3,32 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/FirstSite/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <a href="/FirstSite/index.html">Главная</a>
-    <a href="/FirstSite/catalog/catalog.html">Каталог</a>
-    <a href="">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>
+    <a class="menu_link" href="/FirstSite/index.html">Главная</a>
+    <a class="menu_link" href="/FirstSite/catalog/catalog.html">Каталог</a>
+    <a class="menu_link" href="">Контакты</a>
+    <h1 class="head_1">Главная страница</h1>
+    <p class="p_base">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus amet
       culpa, soluta incidunt hic aspernatur optio ad esse voluptatibus provident
       facilis, dolorem illo commodi possimus, excepturi architecto quasi ex
       blanditiis!
     </p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>
+    <h2 class="head_2">Добро пожаловать на сайт</h2>
+    <p class="p_base">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
       perferendis eius voluptas sapiente debitis quidem repudiandae quisquam,
       aperiam, possimus officiis, delectus optio cupiditate fugit sunt neque.
       Quisquam eligendi iste ducimus.
     </p>
-    <p>
+    <p class="p_base">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam sunt, quas
       qui error architecto repellendus a numquam culpa sequi saepe facilis
       dolores cupiditate totam necessitatibus cum. Dolores, unde dolor. Tenetur.
     </p>
-    <p>
+    <p class="p_base">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati tempora
       cumque dolorum ipsam tenetur commodi nihil vitae assumenda magnam et
       necessitatibus, qui ad officia facilis sequi ipsa magni. Commodi,
