--- a/FirstSite/catalog/catalog.html
+++ b/FirstSite/catalog/catalog.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/FirstSite/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <a href="/FirstSite/index.html">Главная</a>
-    <a href="/FirstSite/catalog/catalog.html">Каталог</a>
-    <a href="">Контакты</a>
-    <h1>Каталог</h1>
-    <p>
+    <a class="menu_link" href="/FirstSite/index.html">Главная</a>
+    <a class="menu_link" href="/FirstSite/catalog/catalog.html">Каталог</a>
+    <a class="menu_link" href="">Контакты</a>
+    <h1 class="head_1">Каталог</h1>
+    <p class="p_base">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quia at ea
       amet laborum ad? Est quisquam, voluptatum inventore sequi voluptate veniam
       dolorem tempora iusto, a dolorum amet accusamus molestiae esse, molestias
@@ -36,7 +37,7 @@
             alt=""
           />
           <p>Хлеб</p>
-          <p>
+          <p class="p_base">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam
             animi praesentium nostrum atque. Nobis dolore ullam explicabo
             suscipit hic consequuntur, eius quidem doloribus ducimus quo autem
@@ -49,7 +50,7 @@
             alt=""
           />
           <p>Орехи</p>
-          <p>
+          <p class="p_base">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam
             animi praesentium nostrum atque. Nobis dolore ullam explicabo
             suscipit hic consequuntur, eius quidem doloribus ducimus quo autem
@@ -62,7 +63,7 @@
             alt=""
           />
           <p>Мясо</p>
-          <p>
+          <p class="p_base">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam
             animi praesentium nostrum atque. Nobis dolore ullam explicabo
             suscipit hic consequuntur, eius quidem doloribus ducimus quo autem
